--- a/index.html
+++ b/index.html
@@ -390,10 +390,19 @@ todo, elaborate
 </section>
 
 <section>
+<section>
 <h3>Use case: Extra visibility/backup</h3>
-todo, update
-<img src="img/transparency.png" class="plain" height="500px"><br>
+<img src="img/abapgitserver_170429_1.png" class="plain" height="500px"><br>
 <a href="https://github.com/larshp/abapGit/wiki/Using-abapGit-and-abapGitServer-for-regular-backup">abapGitServer Setup Guide</a>
+</section>
+
+<section>
+<img src="img/abapgitserver_170429_2.png" class="plain"><br>
+</section>
+
+<section>
+<img src="img/abapgitserver_170429_3.png" class="plain"><br>
+</section>
 </section>
 
 <section>
