--- a/index.html
+++ b/index.html
@@ -50,6 +50,42 @@
 </section>
 
 <section>
+    <section>
+<h3>What is git and GitHub?</h3>
+<table><tr><td>
+<b><i class="fa fa-git fa-2x plain"></i></b><br>
+Decentralized version control system, it allows you to:<br>
+<ul>
+<li>Compare changes over time</li>
+<li>Rollback files to old version</li>
+<li>Track who changed what</li>
+<li>And alot more</li>
+</ul>
+<br>
+<br>
+<b>GitHub</b> <i class="fa fa-github fa-2x plain"></i><br>
+Hosting service for git, free for public projects.<br>
+<ul>
+<li>Provides graphical web interface</li>
+<li>Collaboration via Pull Requests</li>
+</ul>
+</td></tr></table>
+</section>
+<section>
+<h3>Why git and GitHub?</h3>
+<table><tr><td>
+As of April 2017, GitHub reports having almost 20 million users and 57 million repositories.
+<img src="./img/logos/sap.png" class="plain" width="400px">
+<img src="./img/logos/linux.png" class="plain" width="400px">
+<br>
+<img src="./img/logos/microsoft.png" class="plain" width="250px">
+<img src="./img/logos/google.png" class="plain" width="250px">
+<img src="./img/logos/facebook.png" class="plain" width="250px">
+</td></tr></table>
+</section>
+</section>
+
+<section>
 <h3>Disclaimer</h3>
 <img src="img/const.gif" class="plain">
 <marquee>Test in sandbox</marquee>
@@ -112,43 +148,43 @@
 <tr>
 <td>Fabian Lupa</td>
 <td><a href="https://github.com/flaiker/"><i class="fa fa-github plain"></i></a></td>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
+<td>Christian Günter</td>
+<td><a href="https://github.com/christianguenter2/"><i class="fa fa-github plain"></i></a></td>
 </tr>
 
 <tr>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
+<td>Christian Tapia Sabogal</td>
+<td><a href="https://github.com/christian1020-94/"><i class="fa fa-github plain"></i></a></td>
+<td>Domi Bigl</td>
+<td><a href="https://github.com/bigld/"><i class="fa fa-github plain"></i></a></td>
 </tr>
 
 <tr>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
+<td>Giovanni Degani</td>
+<td><a href="https://github.com/tiefox/"><i class="fa fa-github plain"></i></a></td>
+<td>Kasper Vilhelm Torp</td>
+<td><a href="https://github.com/kvtorp/"><i class="fa fa-github plain"></i></a></td>
 </tr>
 
 <tr>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
+<td>Christian Pfaller</td>
+<td><a href="https://github.com/pfaller/"><i class="fa fa-github plain"></i></a></td>
+<td>Alex Chan</td>
+<td><a href="https://github.com/alexanderchan/"><i class="fa fa-github plain"></i></a></td>
 </tr>
 
 <tr>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
+<td>masterrx</td>
+<td><a href="https://github.com/masterrx/"><i class="fa fa-github plain"></i></a></td>
+<td>Pascal</td>
+<td><a href="https://github.com/RedWolf112/"><i class="fa fa-github plain"></i></a></td>
 </tr>
 
 <tr>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
-<td>test</td>
-<td><a href="https://github.com/test/"><i class="fa fa-github plain"></i></a></td>
+<td>Jakub Filak</td>
+<td><a href="https://github.com/filak-sap/"><i class="fa fa-github plain"></i></a></td>
+<td>Fabio Zuber</td>
+<td><a href="https://github.com/Sirius-A/"><i class="fa fa-github plain"></i></a></td>
 </tr>
 </table>
 </section>
