--- a/index.html
+++ b/index.html
@@ -411,18 +411,14 @@ Git protocol: "Server and client MUST use lowercase for obj-id, both MUST treat 
 
 <section>
 <h3>Use case: Share/Collaborate</h3>
-todo, elaborate
-<i class="mega-octicon really-more-mega octicon-git-branch"></i>
-&nbsp;&nbsp;&nbsp;
-<i class="mega-octicon really-more-mega octicon-git-commit"></i>
-&nbsp;&nbsp;&nbsp;
-<i class="mega-octicon really-more-mega octicon-git-pull-request"></i>
-&nbsp;&nbsp;&nbsp;
-<i class="mega-octicon really-more-mega octicon-thumbsup"></i>
-&nbsp;&nbsp;&nbsp;
-<i class="mega-octicon really-more-mega octicon-git-merge"></i>
-&nbsp;&nbsp;&nbsp;
-<i class="mega-octicon really-more-mega octicon-history"></i>
+<br>
+<table><tr><td>
+<i class="mega-octicon more-mega octicon-git-branch"></i> Fork<br><br>
+<i class="mega-octicon more-mega octicon-git-commit"></i> Commit<br><br>
+<i class="mega-octicon more-mega octicon-git-pull-request"></i> Create Pull Request<br><br>
+<i class="mega-octicon more-mega octicon-thumbsup"></i> Review<br><br>
+<i class="mega-octicon more-mega octicon-git-merge"></i> Merge
+</td></tr></table>
 </section>
 
 <section>
