--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@ Hosting service for git, free for public projects.<br>
 <h3>Why git and GitHub?</h3>
 <table><tr><td>
 As of April 2017, GitHub reports having almost 20 million users and 57 million repositories.
-<img src="./img/logos/sap.png" class="plain" width="400px">
-<img src="./img/logos/linux.png" class="plain" width="400px">
+<a href="https://github.com/sap"><img src="./img/logos/sap.png" class="plain" width="400px"></a>
+<a href="https://github.com/torvalds/linux"><img src="./img/logos/linux.png" class="plain" width="400px"></a>
 <br>
-<img src="./img/logos/microsoft.png" class="plain" width="250px">
-<img src="./img/logos/google.png" class="plain" width="250px">
-<img src="./img/logos/facebook.png" class="plain" width="250px">
+<a href="https://github.com/microsoft"><img src="./img/logos/microsoft.png" class="plain" width="250px"></a>
+<a href="https://github.com/google"><img src="./img/logos/google.png" class="plain" width="250px"></a>
+<a href="https://github.com/facebook"><img src="./img/logos/facebook.png" class="plain" width="250px"></a>
 </td></tr></table>
 </section>
 </section>
@@ -99,7 +99,7 @@ As of April 2017, GitHub reports having almost 20 million users and 57 million r
 
 <section>
 <table>
-<tr><td colspan="2"><b>Git client for ABAP</b></td></tr>
+<tr><td colspan="2"><i class="fa fa-git fa plain"></i> <b>client for ABAP</b></td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-calendar"></i></td><td>started ~3 years ago</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-git-commit"></i></td><td>~1500 commits</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-organization"></i></td><td>22 contributors</td></tr>
@@ -366,7 +366,7 @@ Git protocol: "Server and client MUST use lowercase for obj-id, both MUST treat 
 <tr><td>
 <a href="https://hcp.sap.com"><img src="./img/logos/hcp.png" width="650" class="plain"></a>
 </td><td>
-<a href="https://github.com"><img src="./img/logos/GitHub_Logo.png" width="250" class="plain"></a>
+<a href="https://github.com"><i class="fa fa-github fa-5x plain"></i></a>
 </td></tr>
 <tr><td align="center">
 <a href="https://www.visualstudio.com/team-services/git/"><img src="./img/logos/vs.png" width="550" class="plain"></a><br>
@@ -413,12 +413,14 @@ Git protocol: "Server and client MUST use lowercase for obj-id, both MUST treat 
 <h3>Use case: Share/Collaborate</h3>
 <br>
 <table><tr><td>
-<i class="mega-octicon more-mega octicon-git-branch"></i> Fork<br><br>
-<i class="mega-octicon more-mega octicon-git-commit"></i> Commit<br><br>
-<i class="mega-octicon more-mega octicon-git-pull-request"></i> Create Pull Request<br><br>
-<i class="mega-octicon more-mega octicon-thumbsup"></i> Review<br><br>
-<i class="mega-octicon more-mega octicon-git-merge"></i> Merge
-</td></tr></table>
+<i class="mega-octicon more-mega octicon-git-branch"></i></td><td>Fork</td></tr><tr><td>
+<i class="mega-octicon more-mega octicon-git-commit"></i></td><td>Commit</td></tr><tr><td>
+<i class="mega-octicon more-mega octicon-git-pull-request"></i></td><td>Create Pull Request</td></tr><tr><td>
+<i class="mega-octicon more-mega octicon-thumbsup"></i></td><td>Review</td></tr><tr><td>
+<i class="mega-octicon more-mega octicon-git-merge"></i></td><td>Merge</td></tr>
+</table>
+<a href="https://guides.github.com/introduction/flow/">Understanding the GitHub Flow</a>
+
 </section>
 
 <section>
@@ -469,8 +471,6 @@ Continuous integration via <a href="https://travis-ci.org/">Travis-CI</a><br>
 
 <section>
 <h2>#ABAPisNotDead</h2>
-<i class="fa fa-sun-o plain"></i>
-<br>
 <table>
 <tr><td>
 <h3>Slides</h3></td><td>
@@ -485,6 +485,7 @@ Continuous integration via <a href="https://travis-ci.org/">Travis-CI</a><br>
 <a href="https://twitter.com/LarsHvam">@LarsHvam</a>
 </td></tr>
 </table>
+<i class="fa fa-sun-o plain"></i>
 </section>
 </div>
 </div>
