--- a/index.html
+++ b/index.html
@@ -466,7 +466,9 @@ Continuous integration via <a href="https://travis-ci.org/">Travis-CI</a><br>
 </section>
 
 <section>
-<h3>DEMO</h3>
+<h1>DEMO</h1>
+<img src="img/logos/docker.png" class="plain" height="300"><br>
+<a href="https://bitbucket.org/gregorwolf/dockernwabap750">DockerNWABAP750</a>
 </section>
 
 <section>
