--- a/index.html
+++ b/index.html
@@ -190,6 +190,17 @@ As of April 2017, GitHub reports having almost 20 million users and 57 million r
 </section>
 
 <section>
+<h3>abapGit - last 4 months</h3>
+<ul>
+<li>+500 commits</li>
+<li>+10000 lines of code</li>
+<li>+8 new object types supported</li>
+<li>+10 new contributors</li>
+</ul>
+
+</section>
+
+<section>
 <h3>Design Goals</h3>
 <ul>
 <li>Easy installation</li>
@@ -447,6 +458,24 @@ Git protocol: "Server and client MUST use lowercase for obj-id, both MUST treat 
 </section>
 
 <section>
+<h3>More Open Source</h3>
+<table><tr><td>
+<a href="https://github.com/sbcgua/mockup_loader">mockup_loader</a> by Alexander Tsybulsky<br>
+<br>
+<a href="https://github.com/RainerWinkler/Moose-FAMIX-SAP-Extractor">Moose-FAMIX-SAP-Extractor</a> by Rainer Winkler<br>
+<br>
+<a href="https://github.com/fidley/falv">falv</a> by Łukasz Pęgiel<br>
+<br>
+<a href="https://github.com/Sumu-Ning/AES">AES</a> by Pingsan Song<br>
+<br>
+<a href="https://github.com/flaiker/abap-log">abap-log</a> by Fabian Lupa<br>
+<br>
+<a href="https://github.com/cesar-sap/abap_fm_json">abap_fm_json</a> by Cesar Martin<br>
+</td></tr></table>
+</section>
+
+
+<section>
 <h3>ABAP</h3>
 <table><tr><td>
 Continuous integration via <a href="https://travis-ci.org/">Travis-CI</a><br>
@@ -458,7 +487,6 @@ Continuous integration via <a href="https://travis-ci.org/">Travis-CI</a><br>
 <ul>
 <li>Instant shipping, just ship it(no state)</li>
 <li>Delivery to old ABAP AS versions(7.02+)</li>
-<li>Open Open Source</li>
 <li>Git workflow</li>
 <a href="http://searchsap.techtarget.com/tip/Implementing-modern-practices-in-an-ABAP-development-shop">Decentralized development(Ethan Jewett)</a>
 </ul>
@@ -468,7 +496,7 @@ Continuous integration via <a href="https://travis-ci.org/">Travis-CI</a><br>
 <section>
 <h1>DEMO</h1>
 <img src="img/logos/docker.png" class="plain" height="300"><br>
-<a href="https://bitbucket.org/gregorwolf/dockernwabap750">DockerNWABAP750</a>
+<a href="https://bitbucket.org/gregorwolf/dockernwabap750">DockerNWABAP750</a> (by Gregor Wolf)
 </section>
 
 <section>
